--- a/root.css
+++ b/root.css
@@ -1,6 +1,6 @@
 :root {
     --font-primary: 'Source Serif Pro';
-    
+
     --very-dark-grey: #222;
     --dark-grey: #555;
     --light-grey: #DADADA;
@@ -41,7 +41,7 @@ body {
 }
 
 h1 {
-    font-family: var(--font-h1), sans-serif;
+    font-family: var(--font-h1), Lemon Milk;
     font-size: 50px;
     font-weight: normal;
     
