--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ div a:after{
 body {
     font-family: var(--font-primary);
     color: var(--text-primary);
+    background-image: linear-gradient(rgba(202, 202, 255, 0.5), rgba(255, 255, 181, 0.5));
+}
+
+html, body {
+    overflow: auto;
+    margin: 0;
+    height: 100%;
 }
 
 @media screen and (max-width: 700px) {
