--- a/style.css
+++ b/style.css
@@ -31,6 +31,16 @@ html, body {
     height: 100%;
 }
 
+img {
+    width: 800px;
+    height: 1200px;
+    object-fit: contain;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+
 @media screen and (max-width: 700px) {
     .link-to-code {
         display: none;
